language/move-lang/tests/move_check/control_flow/infinite_loop_with_dead_exits.exp
error: 

    ┌── tests/move_check/control_flow/infinite_loop_with_dead_exits.move:13:17 ───
    │
 13 │             if (return) break;
    │                 ^^^^^^ Invalid use of a divergent expression. The code following the evaluation of this expression will be dead and should be removed. In some cases, this is necessary to prevent unused resource values.
    │

error: 

    ┌── tests/move_check/control_flow/infinite_loop_with_dead_exits.move:13:25 ───
    │
 13 │             if (return) break;
    │                         ^^^^^ Unreachable code. This statement (and any following statements) will not be executed. In some cases, this will result in unused resource values.
    │

