language/move-lang/tests/move_check/control_flow/infinite_loop_with_dead_exits.move
address 0x42 {
module M {

    // fun t1() {
    //     loop {
    //         continue;
    //         break
    //     };
    // }

    fun t2() {
        loop {
            if (return) break;
        }
    }

}
}
